syntax = "proto3";

package giftduels.telegrambot.v1;

import "giftduels/shared/v1/common.proto";

option go_package = "github.com/peterparker2005/giftduels/packages/protobuf-go/gen/giftduels/telegrambot/v1;telegrambotv1";

message StarInvoicePayload {
  oneof purpose {
    GiftWithdrawCommission gift_withdraw_commission = 1;
  }
}

message GiftWithdrawCommission {
  repeated GiftCommission gift_commissions = 1;
}

message GiftCommission {
  shared.v1.GiftId gift_id = 1;
  shared.v1.StarsAmount stars = 2;
}
